--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -1,36 +1,46 @@
 .hero {
+  position: relative;
   margin: 0 50px;
 }
 
 .hero-content {
-  margin: 170px 0 0px;
-  width: 450px;
+  margin-top: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.hero-title {
+.hero-content-description {
+  width: 550px;
+  margin-top: 100px;
+}
+
+.hero-content-title {
   color: black;
   font-family: 'Rubik', sans-serif;
   margin: 5px 0;
+  width: 450px;
 }
 
-.hero-title h2 {
+.hero-content-title h2 {
   font-size: 2.3rem;
 }
 
-.hero-title h2 span {
+.hero-content-title h2 span {
   color: var(--verde10);
 }
 
-.hero-text {
+.hero-content-text {
   margin: 15px 0;
   font-family: 'Rubik', sans-serif;
   font-size: 0.7rem;
   color: var(--gris10);
   letter-spacing: 1.2px;
   font-family: 400;
+  width: 450px;
 }
 
-.hero-text .button {
+.hero-content-text .button {
   font-family: 'Raleway', sans-serif;
   margin: 15px 0;
   color: white;
@@ -44,8 +54,18 @@
   text-transform: uppercase;
 }
 
+.hero-content-image {
+  background: url("../images/cuida_tu_familia.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 800px;
+  height: 460px;
+  margin-left: 80px;
+  margin-right: -3vw;
+}
+
 .hero-play {
-  margin-top: 150px;
+  margin-top: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
