--- a/assets/css/hero.scss
+++ b/assets/css/hero.scss
@@ -1,55 +1,73 @@
-
 .hero {
+  position: relative; 
   margin: 0 50px;
 
   &-content {
     // border: 1px red solid;
-    margin: 170px 0 0px;
-    width: 450px;
-  }
+    margin-top: 70px;
+    display: flex; 
+    
+    &-description {
+      width: 550px;
+      margin-top: 100px; 
+    }
 
-  &-title {
-    color: black;
-    font-family: 'Rubik', sans-serif;
-    margin: 5px 0;
+    &-title {
+      color: black;
+      font-family: 'Rubik', sans-serif;
+      margin: 5px 0;
+      width: 450px;
 
-    h2 {
-      font-size: 2.3rem;
+      h2 {
+        font-size: 2.3rem;
 
-      span {
-        color: var(--verde10);
+        span {
+          color: var(--verde10);
+        }
+
+      }
+      
+    }
+
+    &-text {
+      margin: 15px 0 ;
+      font-family: 'Rubik', sans-serif;
+      font-size: 0.7rem;
+      color: var(--gris10);
+      letter-spacing: 1.2px;
+      font-family: 400;
+      width: 450px;
+
+      .button {
+        font-family:  'Raleway', sans-serif;
+        margin: 15px 0;
+        color: white;
+        background: var(--verde10);
+        padding: 15px 50px;
+        border: none;
+        border-radius: 5px;
+        font-weight: bold;
+        font-size: 0.6rem;
+        letter-spacing: 1px;
+        text-transform: uppercase;
       }
 
     }
-    
-  }
-
-  &-text {
-    margin: 15px 0 ;
-    font-family: 'Rubik', sans-serif;
-    font-size: 0.7rem;
-    color: var(--gris10);
-    letter-spacing: 1.2px;
-    font-family: 400;
-
-    .button {
-      font-family:  'Raleway', sans-serif;
-      margin: 15px 0;
-      color: white;
-      background: var(--verde10);
-      padding: 15px 50px;
-      border: none;
-      border-radius: 5px;
-      font-weight: bold;
-      font-size: 0.6rem;
-      letter-spacing: 1px;
-      text-transform: uppercase;
+  
+    &-image { 
+      background: url('../images/cuida_tu_familia.svg');
+      background-repeat: no-repeat;
+      background-size: contain;
+      width: 800px;
+      height: 460px; 
+      margin-left: 80px;
+      margin-right: -3vw; 
     }
 
   }
 
   &-play {
-    margin-top: 150px;
+    margin-top: 60px;
     display: flex;
     align-items: center;
 
