--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,7 +1,8 @@
 .header {
   position: relative;
+  margin: 35px 3%;
   display: block;
-  width: calc(94vw);
+  width: 94%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
